# retry_future

./: .gitignore  Cargo.toml  README.md
examples/: http_request.rs  http_request_function.rs  http_request_macro.rs  http_request_simple.rs  preconfigured_retry.rs  reqwest_retry.rs
src/: error.rs  future.rs  lib.rs  retry_strategy.rs
src/retry_strategy/: exponential.rs  infinite.rs  linear.rs
