[package]
name = "async_retry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
tokio = { version = "1", features = ["time"] }
futures = "0.3.24"
pin-project = "1.0.12"

[dev-dependencies]
reqwest = { version = "0.11.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
